--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.21.0",
     "vuex": "^2.5.0",
-    "vuex-router-sync": "^5.0.0"
+    "vuex-router-sync": "^5.0.0",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
